--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter&family=Rubik+Glitch&display=swap');
+
+
+body {
+    font-family: 'Bebas Neue', sans-serif;
+}
+
+.custom-tracking {
+    letter-spacing: 79px;
+}
+
+.custom-spacing {
+    letter-spacing: 12.8px;
+}
+
+.custom-fonts {
+    font-family: 'Inter', sans-serif;
+}
