--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
     font-family: 'Bebas Neue', sans-serif;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 .custom-tracking {
     letter-spacing: 79px;
 }
@@ -15,7 +19,12 @@ body {
 .custom-spacing {
     letter-spacing: 12.8px;
 }
-
+.custom-spacing-footer {
+    letter-spacing: 1.3px;
+}
+.custom-spacing-footer2 {
+    letter-spacing: 3.2px;
+}
 .custom-fonts {
     font-family: 'Inter', sans-serif;
 }
