--- a/src/index.css
+++ b/src/index.css
@@ -15,15 +15,20 @@ body::-webkit-scrollbar {
 .custom-tracking {
     letter-spacing: 79px;
 }
+.custom-tracking-phone{
+    letter-spacing: 25.67px;
+}
 
 .custom-spacing {
     letter-spacing: 12.8px;
 }
 
 .custom-spacing-top {
-    letter-spacing: 26.88px;
+    letter-spacing: 24.50px;
 }
-
+.custom-spacing-top-phone {
+    letter-spacing: 4.4px;
+}
 .custom-spacing-footer {
     letter-spacing: 1.3px;
 }
@@ -39,4 +44,9 @@ body::-webkit-scrollbar {
 .custom-fonts {
     font-family: 'Inter', sans-serif;
 }
-
+.footer-font{
+    font-family: 'Bebas Neue', sans-serif;
+}
+.footer-spacing{
+    letter-spacing: 2.2px;
+}
